--- a/front/src/app/pages/card-search-page/card-search-page.component.scss
+++ b/front/src/app/pages/card-search-page/card-search-page.component.scss
@@ -78,6 +78,15 @@
     flex: 1 1 280px;
     min-width: 200px;
   }
+
+  @include r.mobile-portrait {
+    gap: var(--space-2);
+
+    search-bar {
+      flex: 1 1 100%;
+      min-width: 0;
+    }
+  }
 }
 
 .card-search-page__display-toggle {
